--- a/12-08.md
+++ b/12-08.md
@@ -26,6 +26,14 @@
 1.3.* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую или починенную базу данных.
 
 *Приведите ответ в свободной форме.*
+#### ОТВЕТ:
+
+1.1. Для восстановления данных за предыдущий день необходимо выполнять полное резервное копирование раз в неделю. Ежедневно следует выполнять дифференциальное резервное копирование. Чтобы восстановить данные за заданный день, нужно восстановить полное резервное копирование на начало недели и применить дифференциальное резервное копирование за этот день.
+
+1.2. В этом случае также используется полное резервное копирование, но уже ежедневно (в нерабочее время или при низкой нагрузке). С определенной частотой (например, каждый час) выполняется инкрементное резервное копирование. Для восстановления данных необходимо восстановить данные на начало дня с помощью полного резервного копирования, а затем последовательно применить инкрементные резервные копии до нужного часа.
+
+1.3.* Для моментального переключения на работающую или починенную базу данных при поломке используется репликация, а не резервное копирование. При сбое основной базы данных, реплицирующая база данных (slave), которая содержит последние реплицированные данные, может быть переключена в режим мастера вручную (что занимает время) или автоматически с помощью скрипта (быстро).
+
 
 ---
 
@@ -37,6 +45,21 @@
 
 *Приведите ответ в свободной форме.*
 
+#### ОТВЕТ:
+
+2.1. Пример команды для резервного копирования базы данных в специальном формате:
+$ pg_dump -Fc mydb > db.dump
+-Fc - формат вывода копии в специальном архивном формате, который может быть использован утилитой pg_restore. Вывод в этом формате по умолчанию сжимается.
+
+Пример команды для восстановления архива в ту же базу данных:
+$ pg_restore -d mydb --clean --create db.dump
+-d mydb - указывает имя базы данных для подключения
+--clean - включает команды удаления (DROP) объектов базы данных перед командами создания (CREATE) этих объектов
+--create - создает команду для создания базы данных и подключения к ней
+
+2.1.* Да, этот процесс можно автоматизировать. Можно создать bash-скрипт, который будет выполняться по расписанию. Также можно настроить отправку уведомлений о результате выполнения резервного копирования. [Хабр!] (https://habr.com/ru/articles/595641/)
+
+
 ---
 
 ### Задание 3. MySQL
@@ -46,6 +69,17 @@
 3.1.* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
 
 *Приведите ответ в свободной форме.*
+
+### ОТВЕТ:
+3.1. Пример создания инкрементной резервной копии с использованием двоичного журнала:
+MySQL поддерживает инкрементные резервные копии, которые основаны на двоичном журналировании. Для создания инкрементной резервной копии необходимо запустить сервер с опцией --log-bin, чтобы включить двоичное журналирование. Двоичные файлы журнала содержат информацию о всех изменениях, которые были внесены в базу данных после последнего полного или инкрементного резервного копирования. Чтобы создать инкрементную резервную копию, необходимо ротировать двоичный журнал с помощью команды FLUSH LOGS. Затем нужно скопировать все двоичные файлы журнала, которые находятся между последним полным или инкрементным резервным копированием и предпоследним. Восстановление данных выполняется путем применения этих двоичных файлов журнала, как описано в документации.
+
+mysqldump --flush-logs --delete-master-logs --single-transaction --all-databases | gzip > /var/backups/mysql/$(date +%d-%m-%Y_%H-%M-%S)-inc.gz
+
+3.1.* Использование реплики дает преимущество по сравнению с обычным резервным копированием в следующих случаях:
+- Быстрое восстановление данных: в случае с репликой, данные уже реплицируются на другой сервер, поэтому восстановление может быть выполнено быстрее, чем в случае с обычным резервным копированием.
+- Увеличение доступности: если основная база данных выходит из строя, реплика может быть переключена на работу в качестве основной базы данных, что позволяет продолжить работу без значительных простоев.
+- Распределенные запросы: реплика может использоваться для выполнения распределенных запросов, что позволяет снизить нагрузку на основную базу данных и улучшить производительность.
 
 ---
 
